markdown-learn.md

--- a/_config.aurora.yml
+++ b/_config.aurora.yml
@@ -9,12 +9,12 @@
 #！ @docs https://aurora.tridiamond.tech/guide/configuration.html
 #! ---------------------------------------------------------------
 site:
-  subtitle: Aurora's Blog
-  author: Aurora
-  nick: Auroral UI
+  subtitle: Life Oriented Programming
+  author: Peilin
+  nick: Blog
   description:
   link: '/'
-  language: en
+  language: CN
   multi_language: true
   logo: https://img-blog.csdnimg.cn/20210313122054101.png
   avatar: https://img-blog.csdnimg.cn/20210313122054101.png
