--- a/_config.aurora.yml
+++ b/_config.aurora.yml
@@ -12,12 +12,12 @@ site:
   subtitle: Life Oriented Programming
   author: Peilin
   nick: Blog
-  description:
+  description: Life Oriented Programming
   link: '/'
-  language: CN
+  language: cn
   multi_language: true
   logo: https://img-blog.csdnimg.cn/20210313122054101.png
-  avatar: https://img-blog.csdnimg.cn/20210313122054101.png
+  avatar: https://www.z4a.net/images/2023/06/23/image-20230622235021158.png
   beian:
     number: ''
     link: ''
@@ -31,13 +31,13 @@ site:
 #! ---------------------------------------------------------------
 authors:
   ##! example
-  # TriDiamond:
-  #   name: TriDiamond
-  #   avatar: https://up.enterdesk.com/edpic_source/44/ff/3d/44ff3d6bd2819d524facfcc33205d4cd.jpg
-  #   link: https://github.com/TriDiamond
-  #   description: 'Think like an artist, code like an artisan.'
-  #   socials:
-  #     github: https://tridiamond.tech
+#   TriDiamond:
+#     name: TriDiamond
+#     avatar: https://up.enterdesk.com/edpic_source/44/ff/3d/44ff3d6bd2819d524facfcc33205d4cd.jpg
+#     link: https://github.com/TriDiamond
+#     description: 'Think like an artist, code like an artisan.'
+#     socials:
+#       github: https://tridiamond.tech
 
 #! ---------------------------------------------------------------
 #! Menu Configs
@@ -53,8 +53,8 @@ menu:
 #! @docs https://aurora.tridiamond.tech/guide/theme.html
 #! ---------------------------------------------------------------
 theme:
-  dark_mode: true
-  profile_shape: diamond # support `circle`, `diamond`, `rounded`
+  dark_mode: false
+  profile_shape: circle # support `circle`, `diamond`, `rounded`
   feature: true
   gradient:
     color_1: '#24c6dc'
@@ -66,6 +66,7 @@ theme:
 #! @docs https://aurora.tridiamond.tech/guide/social.html
 #! ---------------------------------------------------------------
 socials:
+  github: 'https://github.com/wupeilindotme'
   customs:
   ##! Example:
   ##! --- Using SVG
